# aibtcdev-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_USAGE.md  Dockerfile  FEATURE_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_EVALUATION_TESTS.md  WORKFLOW_IMPROVEMENTS.md  check_organization.py  check_updates.py  config.py  docker_entrypoint.py  document_processor.py  env.example  eval_viewer.html  eval_viewer_v2.html  grok_search.py  job_queue_improvements_todo.md  job_queue_system_documentation.md  main.py  plan.md  proposal_evaluation_test.py  pyproject.toml  requirements.txt  ruff.toml  run_task.py  test.py  test2.py  test_3.py  test_amount_extraction.py  test_bitcoin_face_analysis.py  test_comprehensive_evaluation.py  test_improved_workflow.py  test_message_flow.py  test_network_school_eval.py  (+7 more)
.claude/: README.md  hooks.json  ruff-hooks.json  settings.local.json
.cursor/: Dockerfile  environment.json  install.sh
.github/: dependabot.yml
api/: README.md  chat.py  crew.py  dependencies.py  tools.py  verify_profile.py  webhooks.py
app/: README.md  config.py  main.py  test_comprehensive_evaluation.py  test_proposal_evaluation.py  worker.py
backend/: README.md  abstract.py  factory.py  models.py  supabase.py
chainhook-data/: buy-and-deposit.json  coinbase.json  conclude-action-proposal.json  create-action-proposal.json  send-many-governance-airdrop.json  send-many-stx-airdrop.json  set-dao-charter.json  vote-on-action-proposal.json
crews/: README.md
db/: README.md
docs/: CONFIG.md  README.md  agent-account-deployer-funding.md  api-overview.md  authentication.md  chainhook_service.md  chat_api_examples.md  chat_api_reference.md  cleanup.md  cli-usage.md  configuration.md  dao_bot_guide.md  dao_creation.md  dao_creation_enhancement.md  dao_creation_technical.md  dao_creation_update.md  development.md  job-deduplication.md  proposal_recommendation_agent.md  runners.md  stx-transfer-task.md  supabase-deployments.md  swagger-usage.md  tools_api_examples.md  tools_api_reference.md  tools_implementation_guide.md  webhook_examples.md  websocket-chat.md  workflows.md
docs-v2/: README.md  README_PLAN.md  README_TEMPLATE.md
examples/: README.md  chain_state_monitor_example.py  chainhook.json  chainhook_20250227_192359.json  chainhook_20250227_192400.json  chainhook_20250227_192403.json  chainhook_20250227_192408.json  chainhook_20250227_192409.json  chainhook_20250227_192410.json  chainhook_20250227_192412.json  chainhook_20250227_192413.json  new_dao_body.json  proposal_evaluation_example.py  proposal_metadata_example.py  proposal_recommendation_component.tsx  proposal_recommendation_example.py  proposal_recommendation_types.ts  proposal_summarization_example.py  stx_transfer_example.py  vector_react_example.py
lib/: README.md  alex.py  discord_factory.py  discord_service.py  hiro.py  images.py  logger.py  lunarcrush.py  platform.py  token_assets.py  tokenizer.py  tools.py  twitter.py  utils.py  velar.py  verify_profile.py  websocket_manager.py
scripts/: README.md  generate_docs.py  generate_evals_manifest.py  generate_vettings_manifest.py  job_monitor.py  run_task.py  (+17 more)
(+563 files in other folders)
