[project]
name = "aibtcdev-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.6",
    "apscheduler==3.11.0",
    "cachetools==6.0.0",
    "fastapi==0.115.12",
    "httpx>=0.25.0",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core>=0.3.56,<1.0.0",
    "langchain-openai==0.3.18",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.7",
    "openai==1.82.1",
    "pgvector==0.3.6",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "python-dotenv==1.1.0",
    "python-magic==0.4.27",
    "python-telegram-bot==22.1",
    "python-twitter-v2==0.9.2",
    "requests==2.32.3",
    "sqlalchemy==2.0.41",
    "starlette==0.46.0",
    "supabase==2.15.2",
    "tiktoken==0.9.0",
    "tweepy==4.15.0",
    "uvicorn==0.34.3",
    "vecs==0.4.5",
]

[project.optional-dependencies]
testing = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.14.1",
    "responses==0.25.7",
]
