[project]
name = "aibtcdev-backend"
version = "0.1.0"
description = "FastAPI backend for AIBTC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "apscheduler==3.11.0",
    "cachetools==6.2.0",
    "fastapi==0.116.1",
    "httpx>=0.25.0",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core>=0.3.56,<1.0.0",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.11",
    "langgraph==0.6.7",
    "openai==1.93.0",
    "pgvector<=0.4.1",
    "pillow>=10.0.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "python-magic==0.4.27",
    "python-telegram-bot==22.4",
    "sqlalchemy==2.0.43",
    "starlette<=0.48.0",
    "supabase==2.18.1",
    "tiktoken==0.11.0",
    "tweepy==4.16.0",
    "uvicorn==0.35.0",
    "vecs==0.4.5",
]

[project.optional-dependencies]
testing = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.0",
    "responses==0.25.8",
]
